feat(threading): introduce Virtual Threads and dedicated Netty thread factories