@@ -18,6 +18,7 @@ package net.dv8tion.jda.internal.utils.concurrent;
 
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.BiFunction;
 import java.util.function.Supplier;
 
 import javax.annotation.Nonnull;
@@ -26,21 +27,61 @@ public class CountingThreadFactory implements ThreadFactory {
     private final Supplier<String> identifier;
     private final AtomicLong count = new AtomicLong(1);
     private final boolean daemon;
+    private final boolean virtual;
+    private final BiFunction<Runnable, String, ? extends Thread> threadCreator;
 
     public CountingThreadFactory(@Nonnull Supplier<String> identifier, @Nonnull String specifier) {
         this(identifier, specifier, true);
     }
 
     public CountingThreadFactory(@Nonnull Supplier<String> identifier, @Nonnull String specifier, boolean daemon) {
-        this.identifier = () -> identifier.get() + " " + specifier;
+        this(identifier, specifier, daemon, false);
+    }
+
+    public CountingThreadFactory(
+            @Nonnull Supplier<String> identifier, @Nonnull String specifier, boolean daemon, boolean virtual) {
+        if (specifier.isEmpty()) {
+            this.identifier = identifier;
+        } else {
+            this.identifier = () -> identifier.get() + " " + specifier;
+        }
         this.daemon = daemon;
+        this.virtual = virtual;
+        this.threadCreator = null;
+    }
+
+    public CountingThreadFactory(
+            @Nonnull Supplier<String> identifier,
+            @Nonnull String specifier,
+            @Nonnull BiFunction<Runnable, String, ? extends Thread> threadCreator) {
+        if (specifier.isEmpty()) {
+            this.identifier = identifier;
+        } else {
+            this.identifier = () -> identifier.get() + " " + specifier;
+        }
+        this.daemon = false;
+        this.virtual = false;
+        this.threadCreator = threadCreator;
+    }
+
+    public boolean isVirtual() {
+        return virtual;
+    }
+
+    public boolean isDaemon() {
+        return daemon;
     }
 
     @Nonnull
     @Override
     public Thread newThread(@Nonnull Runnable r) {
-        Thread thread = new Thread(r, identifier.get() + "-Worker " + count.getAndIncrement());
-        thread.setDaemon(daemon);
-        return thread;
+        String name = identifier.get() + "-Worker " + count.getAndIncrement();
+        if (threadCreator != null) {
+            return threadCreator.apply(r, name);
+        } else if (virtual) {
+            return Thread.ofVirtual().name(name).unstarted(r);
+        } else {
+            return Thread.ofPlatform().name(name).daemon(daemon).unstarted(r);
+        }
     }
 }
